--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <input id="token_input" type="password" placeholder="Freesound.org API Token">
         <input id="search_input" type="text" placeholder="Search Word(s)">       
         <button id="search_submit" type="submit">Submit</button>
-        <button id="search_submit" type="submit">Help</button>
+        <button id="help_submit" type="button">Help</button>
+        <div id="help"></div>
 
     </nav>
     
